--- a/404.html
+++ b/404.html
@@ -4,19 +4,19 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
 <link rel="stylesheet" href="/_nuxt/entry.BEUV1B6P.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DWKHx6-1.js">
-<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.Dy4JwUw0.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/iIEat_Qb.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DL2ewYD0.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CbQYQ3rV.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.Bo6nR2Hm.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CH8EcG6t.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/9j_NycXH.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.BJkSn6RI.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DHR5WCRP.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/TALYOR5H.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C9VINalB.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/HiT621QK.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.TOCKLquH.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/t4NjtxmE.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BxxkgOSB.js">
 <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
 <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-<script type="module" src="/_nuxt/DWKHx6-1.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1746054464797,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"4d234280-f4c0-48a2-9509-ad16046b2d53",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/CbQYQ3rV.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1746824748958,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"aa5c74cf-2f48-45c9-be3f-a8611010e755",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
