--- a/create-my-logo/index.html
+++ b/create-my-logo/index.html
@@ -4,19 +4,19 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
 <link rel="stylesheet" href="/_nuxt/entry.DcZF6FEy.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Da-82SF2.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ZgsZzZ-w.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.Bo6nR2Hm.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cl99EqT1.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D-77sTqe.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/zBw_KSdK.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BBAbhgxi.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.BJkSn6RI.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DcYS2-iI.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C5OAoTCt.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/UhyMPK1p.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DvLXBk7v.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.TOCKLquH.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DJ4ylCyD.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/YukkRwU8.js">
 <link rel="icon" type="image/png" href="/assets/img/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
 <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png">
-<script type="module" src="/_nuxt/Da-82SF2.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1747354854719,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"4cfb2d50-8c67-4b28-a3b1-124446f5c4f9",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/ZgsZzZ-w.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1747355357306,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{stripePriceId:"price_1RG5TYFTB9jSG4ANjtuS9pB3",stripePublishableKey:"pk_test_51QW4xIFTB9jSG4ANEd8hFG0vyeIrnbPGgBYEhHLXh5B646pE7JSPo2lQu6clkvMWUMkY6eJ2Isisg2wiLQsUheQa00uiAh1QzU"},app:{baseURL:"/",buildId:"92ab40a1-6b8b-4599-bf0a-bbd756100bee",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
